--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,12 @@
 		</head>
 		<body>
 			<nav>
-	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
-	        		<li><a href="/blog">Blog</a></li>
-	    		</ul>
+	    			<ul>
+	        			<li><a href="/">Home</a></li>
+		        		<li><a href="/about">About</a></li>
+	        			<li><a href="/cv">CV</a></li>
+	        			<li><a href="/blog">Blog</a></li>
+	    			</ul>
 			</nav>
 			<div class="container">
 			
@@ -20,9 +20,9 @@
 			
 			</div><!-- /.container -->
 			<footer>
-	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+	    			<ul>
+	        			<li><a href="mailto:matthewhamiltonm@gmail.com">email</a></li>
+        				<li><a href="https://github.com/FortinbrasXVI">github.com/FortinbrasXVI</a></li>
 				</ul>
 			</footer>
 		</body>
